# efb-qq-plugin-napcat

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: sanity_test.yaml
efb_qq_plugin_napcat/: NapCat.py  __init__.py
efb_qq_plugin_napcat/napcat/: exceptions.py  friend_manager.py  napcat_bot.py
efb_qq_plugin_napcat/napcat/tests/: friend_manager_test.py  napcat_bot_test.py
efb_qq_plugin_napcat/napcat/types/: friend.py
